[tool.poetry]
name = "hello-cairo"
version = "0.1.0"
description = ""
authors = ["Philipp Muens <philipp@muens.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ecdsa = "^0.17.0"
fastecdsa = "^2.2.3"
sympy = "^1.10.1"
cairo-lang = "^0.9.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
